@@ -31,6 +31,7 @@ Bugs fixed:
 - 1665255 Fixed providergrouping may fail, separated InternalProvider and
 InteropProvider
 - 1666311 Fixed missing support for old-style indication providers
+- 1664992 Fixed interopProvider segfaults with provider-grouping
 
 Changes in 1.2.0
 ================
